fixed gap between cards

--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -24,5 +24,6 @@
     .places {
         padding-top: 64px;
         width: 100%;
+        row-gap: 50px;
     }
 }
